[gd_scene load_steps=8 format=3 uid="uid://b6qnxkomv2oyu"]

[ext_resource type="Script" path="res://hud/credit_message_page_1.gd" id="1_fkhsu"]
[ext_resource type="FontFile" uid="uid://dl3r6e3kek5om" path="res://fonts/EagleLake-Regular.ttf" id="1_nebkp"]
[ext_resource type="PackedScene" uid="uid://dcavq0702pxar" path="res://hud/credit_message_page_2.tscn" id="2_m7yx0"]

[sub_resource type="Animation" id="Animation_bpfv4"]
resource_name = "page_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_apblu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hnruf"]
resource_name = "page_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_13bgk"]
_data = {
"RESET": SubResource("Animation_apblu"),
"page_in": SubResource("Animation_bpfv4"),
"page_out": SubResource("Animation_hnruf")
}

[node name="CreditMessage_page_1" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fkhsu")
page_2 = ExtResource("2_m7yx0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 76.0
grow_horizontal = 2

[node name="title" type="Label" parent="ColorRect/CenterContainer"]
self_modulate = Color(0.770378, 0.783124, 0.791558, 1)
texture_filter = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("1_nebkp")
theme_override_font_sizes/font_size = 35
text = "Tiny Brave"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -90.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Este juego fue creado por:
Pedro Torrez, GitHub: https://github.com/PITT1"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Contenido Adicional:
Assets, Sprites, Sonido y MÃºsica:
 Todos los elementos visuales y auditivos utilizados en este juego
 provienen de recursos gratuitos
 y de libre uso encontrados en itch.io y YouTube.
 Estoy agradecido por la comunidad que hace posible
el arte del codigo libre

"
horizontal_alignment = 1

[node name="next" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -47.0
offset_right = 43.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "Continuar"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_13bgk")
}

[connection signal="button_up" from="ColorRect/next" to="." method="_on_next_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
